data/derived/fa15/progs/unify/prog3788.ml.out
Characters 96-119:
  | Sine sine		    -> ""^sin(pi*.eval(sine,x,y))
                         ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         string
